external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/missing_required_envs_segment/Move.snap
---
source: crates/move-package-alt/tests/parsing_tests.rs
---
error: TOML parse error at line 1, column 1
  |
1 | [package]
  | ^
missing field `environments`
